--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
 clap = { version = "4.5.54", features = ["derive"] }
 clap-stdin = "0.8.0"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
