--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-/target
+target/
 .direnv/
+
+.test-gadget/*
+!.test-gadget/course.json
+!.test-gadget/test-gadget-client-windows.exe
+!.test-gadget/test-gadget-client-linux
+!.test-gadget/test-gadget-client-macos
