--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 base64 = "0.22.1"
 clap = { version = "4.5.54", features = ["derive"] }
 clap-stdin = "0.8.0"
+regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
